Thu May 16 13:31:27 BST 2002  Sam Liddicott <saml@ananova.net>

	* Added loads more missing files like images and templates to the package
	* Also fixed the templates to use the new images dir (if they used images, which they actaully don't)

Thu May 16 12:56:55 BST 2002  Sam Liddicott <saml@ananova.net>

	* Fixes to spec file to add various missing files

Wed May 15 12:59:37 BST 2002  Olly Betts <olly@survex.com>

	* omindex now understand acronyms (N.A.T.O. E.T ...).

	* $html_highlight{} now understands "&" (AT&T M&S ...) and
	  acronyms.

Tue May 14 13:08:41 BST 2002  Olly Betts <olly@survex.com>

	* Index <word>&<word> as a single term (e.g. AT&T, M&S, A&P).

Tue May 14 12:37:49 BST 2002  Olly Betts <olly@survex.com>

	* omindex.cc: cleaned up a little. 

Tue May 14 11:24:42 BST 2002  Olly Betts <olly@survex.com>

	* Fixed config.h inclusion; using std::*.

Tue May 14 11:18:37 BST 2002  Olly Betts <olly@survex.com>

	* Updated.

Tue May 14 11:16:03 BST 2002  Olly Betts <olly@survex.com>

	* Added SORT and SORTBANDS.

Mon May 13 12:52:29 BST 2002  Olly Betts <olly@survex.com>

	* Autoconf 2.50.

	* Commented out omindex-config (since it's unfinished) and XML support
	  (since only omindex-config uses it).

Thu May 02 16:06:02 BST 2002  Olly Betts <olly@survex.com>

	* Updated to reflect removal of OmData.

Wed May 01 11:26:59 BST 2002  Olly Betts <olly@survex.com>

	* Changed to use queryparser in libomqueryparser.

Tue Apr 23 15:10:42 BST 2002  Olly Betts <olly@survex.com>

        * Make buildall smart enough to generate aclocal.m4 properly and
          remove acinclude.m4.  It now also extracts the package name from
          configure.in so we can use the same buildall everywhere; fixed
	  problem with double use of AM_CXXFLAGS in Makefile.am.

Tue Apr 23 14:27:29 BST 2002  Olly Betts <olly@survex.com>

	* Updated for xapian-config and xapian.m4 changes.

Thu Apr 18 14:37:05 BST 2002  Olly Betts <olly@survex.com>
